dataset1235/2025-2/805158916/users/674524038/executions/3435325918_4093783519.log
== RUN (2025-09-03 14:36:40)
-- CODE: 
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: "))

if (num % 2 == 0):
	mensagem = "sim"
else:
	mensagem = "nao"

print(mensagem.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
---- user output:
Digite um numero: sim
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
---- user output:
Digite um numero: nao
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
---- user output:
Digite um numero: nao
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
---- user output:
Digite um numero: nao
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
---- user output:
Digite um numero: sim
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
---- user output:
Digite um numero: sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:36:12)
-- CODE: 
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: ")()

if (num % 2 == 0):
	mensagem = "sim"
else:
	mensagem = "nao"

print(mensagem.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
-- ERROR:
File "XXXX", line 5
    num = int(input("Digite um numero: ")()
             ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
-- ERROR:
File "XXXX", line 5
    num = int(input("Digite um numero: ")()
             ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
-- ERROR:
File "XXXX", line 5
    num = int(input("Digite um numero: ")()
             ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
-- ERROR:
File "XXXX", line 5
    num = int(input("Digite um numero: ")()
             ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
-- ERROR:
File "XXXX", line 5
    num = int(input("Digite um numero: ")()
             ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
-- ERROR:
File "XXXX", line 5
    num = int(input("Digite um numero: ")()
             ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:37:15)
-- CODE: 
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: "))

if (num % 2 == 0):
	mensagem = "sim"
else:
	mensagem = "nao"

print(mensagem.lower())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
---- user output:
Digite um numero: sim
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
---- user output:
Digite um numero: nao
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
---- user output:
Digite um numero: nao
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
---- user output:
Digite um numero: nao
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
---- user output:
Digite um numero: sim
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
---- user output:
Digite um numero: sim
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:36:24)
-- CODE: 
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: "))

if (num % 2 == 0):
	mensagem = "sim"
else:
	mensagem = "nao"

print(mensagem.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
---- user output:
Digite um numero: SIM
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
---- user output:
Digite um numero: NAO
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
---- user output:
Digite um numero: NAO
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
---- user output:
Digite um numero: NAO
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
---- user output:
Digite um numero: SIM
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
---- user output:
Digite um numero: SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
